changed color of btn-v2 to black, fixed basic styling of edit shift

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -21,7 +21,7 @@
 }
 // Skill button - white background
 .btn-v2 {
-  border: 1px solid #FF5D49;
+  border: 1px solid black;
   padding: 3px 8px;
   margin: 5px 2px;
   border-radius: 16px;
@@ -51,7 +51,7 @@
   margin: 5px 2px;
   border-radius: 16px;
   font-weight: lighter;
-  font-size: 10px;
+  font-size: 12px;
   line-height: 1rem;
   a {
   text-decoration: none;
