--- a/app/assets/stylesheets/components/_container.scss
+++ b/app/assets/stylesheets/components/_container.scss
@@ -28,6 +28,7 @@
   height: 100%;
   padding-left: 0;
   overflow: auto;
+  margin-top: 30px;
 }
 
 .content-container-horizontal{
