--- a/app/assets/stylesheets/components/_employee-card.scss
+++ b/app/assets/stylesheets/components/_employee-card.scss
@@ -1,20 +1,21 @@
-.employees-department {
+.employees-department, .employees-skills {
   height: 500px;
+  width: 100%;
 }
-
+.shift-employees {
+    padding-left: 23px;
+}
 
 .card-product {
   overflow: hidden;
   height: 80px;
   background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
   display: flex;
-  // flex-wrap: wrap;
   align-items: center;
-  width: 80%;
-  margin: 20px 0px;
-}
-
+  width: 60%;
+  margin-top: 10px;
+  }
 .left-box{
   height: 100%;
   width: 80px;
@@ -25,8 +26,6 @@
     margin-left: 10px;
   }
 }
-
-
 
 .card-product p {
   font-size: 14px;
