--- a/app/assets/stylesheets/pages/_planner.scss
+++ b/app/assets/stylesheets/pages/_planner.scss
@@ -118,8 +118,8 @@
       text-decoration: none;
     }
     p {
-      border: 1px solid white;
-      color: white;
+      border: 1px solid black;
+      color: black;
     }
   }
 }
